@@ -1,3 +1,11 @@
+Mon Dec  6 15:59:52 UTC 2010  Adam Mitz  <mitza@ociweb.com>
+
+        * bin/make_release.py:
+
+          Enabled the calls to update_latest_tag() now that the bug in that
+          functions has been fixed in:
+          Tue Sep 14 16:42:26 UTC 2010  Adam Mitz  <mitza@ociweb.com>
+
 Sat Dec  4 14:25:26 UTC 2010  Steve Huston  <shuston@riverace.com>
 
         * ace/ACE.cpp (timestamp):
